apps/base/home-assistant/home-assistant.yaml
apiVersion: v1
kind: Service
metadata:
  name: home-assistant-web
  namespace: app-home-assistant
spec:
  ports:
    - name: http
      port: 8123
  selector:
    app: home-assistant
