apps/base/home-assistant/ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: home-assistant
  namespace: app-home-assistant

spec:
  entryPoints:
    - websecure

  routes:
    - match: Host(`hass.cluster.arpa`)
      kind: Rule
      services:
        - name: home-assistant-web
          port: 8123
  tls:
    secretName: traefik-tls
